--- a/DevcampPortfolio/app/views/portfolios/index.html.erb
+++ b/DevcampPortfolio/app/views/portfolios/index.html.erb
@@ -1,10 +1,13 @@
 <h1>Portfolio items</h1>
 
+<%= link_to "Create new Portfolio", new_portfolio_path %>
+
 <% @portfolio_items.each  do |portfolio_item| %>
 <p><%= portfolio_item.title %> </p>
 <p><%= portfolio_item.subtitle %> </p>
 <p><%= portfolio_item.body %> </p>
 <img src="<%= portfolio_item.thumb_image %>" alt="<%= portfolio_item.title%>">
+<%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
 <% end %>
 
 
