--- a/DevcampPortfolio/app/views/portfolios/index.html.erb
+++ b/DevcampPortfolio/app/views/portfolios/index.html.erb
@@ -8,6 +8,8 @@
 <p><%= portfolio_item.body %> </p>
 <img src="<%= portfolio_item.thumb_image %>" alt="<%= portfolio_item.title%>">
 <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
+<%= link_to 'Delete portfolio item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
+
 <% end %>
 
 
